[package]
name = "glc"
version = "0.1.0"
authors = ["Joel Uckelman <uckelman@nomic.net>"]
description = "Vassal Game Library Common"
license = "GPL-3.0-or-later"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["http1", "http2", "json", "macros", "multipart", "query", "tokio"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2.0"
tower-http = { version = "0.6", features = ["compression-br", "compression-deflate", "compression-gzip", "compression-zstd", "cors", "fs", "timeout", "trace"] }
tracing = "0.1"
urlencoding = "2.1.3"
