[package]
name = "glc"
version = "0.1.0"
authors = ["Joel Uckelman <uckelman@nomic.net>"]
description = "Vassal Game Library Common"
license = "GPL-3.0-or-later"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["http1", "http2", "json", "macros", "multipart", "query", "tokio"] }
digest = { version = "0.10", features = ["mac"] }
hmac = "0.12"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["compression-br", "compression-deflate", "compression-gzip", "compression-zstd", "cors", "fs", "timeout", "trace"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-panic = { version = "0.1", features = ["capture-backtrace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2.1.3"

[dev-dependencies]
nix = { version = "0.30", features = ["signal"] }
